# rsched

./: CLAUDE.md  Cargo.toml  README.md  build.rs  kernel.config
.github/workflows/: veristat.yml
rsched-common/: Cargo.toml
rsched-common/src/: lib.rs
rsched-ebpf/: Cargo.toml
rsched-ebpf/src/: bpf_helpers.rs  main.rs  map_ops.rs  vmlinux.rs
src/: cpu_metrics.rs  main.rs  perf.rs  pmu.rs  rsched_collector.rs  rsched_stats.rs  schedstat.rs  topology.rs
src/bpf/: core-helpers.h  rsched.bpf.c
veristat/: 1_l3_1_numa.json  24_l3_2_numa.json  2_l3_1_numa.json  4_l3_1_numa.json
