[package]
name = "rsched"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.25.0"
libbpf-cargo = "0.25.0"
anyhow = "1.0"
plain = "0.2"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
num_cpus = "1.17"
atty = "0.2"

[build-dependencies]
libbpf-cargo = "0.25.0"

[profile.release]
panic = "abort"
