[package]
name = "rsched"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.25.0"
libbpf-cargo = "0.25.0"
anyhow = "1.0"
plain = "0.2"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
num_cpus = "1.17"
atty = "0.2"
pfm = "0.1.2"
pfm-sys = "0.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
libbpf-cargo = "0.25.0"

[profile.release]
panic = "abort"
