[workspace]
resolver = "2"
members = [".", "rsched-common", "rsched-ebpf"]

[package]
name = "rsched"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = "0.13"
aya-log = "0.2"
rsched-common = { path = "rsched-common", features = ["user"] }
anyhow = "1.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
num_cpus = "1.17"
atty = "0.2"
pfm = "0.1.2"
pfm-sys = "0.0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
aya-build = "0.1"

[profile.release]
panic = "abort"
